<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:id="@+id/img_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_got"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/received" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/img_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/img_tabs"/>

</RelativeLayout>