<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:id="@+id/task_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_ass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assigned" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history" />
    </android.support.design.widget.TabLayout>


    <android.support.v4.view.ViewPager
            android:id="@+id/pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_tabs"
        />

</RelativeLayout>