<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:subtitleTextColor="@color/colorPrimaryDark"
        android:subtitle="@string/new_task_1" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorLightGrey"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/textInfoStep1"
        android:textColor="@color/colorPrimary" />

        <GridView
            android:id="@+id/choseImageGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/info"
            android:layout_marginHorizontal="10dp"
            android:columnWidth="100dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"></GridView>

        <ProgressBar
            android:id="@+id/loadingTasks"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:visibility="invisible" />

        <Button
            android:id="@+id/cancelTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/nextStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:textColor="@color/colorWhite"
            android:clickable="false"
            android:focusable="true"
            android:text="@string/next" />



</RelativeLayout>