<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".ActivityMain">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:importantForAutofill="no"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_below="@+id/username"/>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/password"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
         />

</RelativeLayout>