<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:subtitleTextColor="@color/colorPrimaryDark"
        android:subtitle="@string/new_task_2" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorLightGrey"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="Select user:"
                android:textColor="@color/colorPrimary" />

            <Spinner
                android:id="@+id/spinner_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="Select task type:"
                android:textColor="@color/colorPrimary" />

            <Spinner
                android:id="@+id/spinner_task_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="Set due by date:"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/setDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:hint="00-00-0000" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="Input task title:"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/setTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="Input task description:"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/setTaskDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="60dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/backTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/back" />

    <Button
        android:id="@+id/submitTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:clickable="false"
        android:focusable="true"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:textColor="@color/colorWhite"
        android:text="@string/create_task" />



</RelativeLayout>